Armageddon-Lab3/modules/tokyo_authority/4-tgw_attachments.tf
resource "aws_ec2_transit_gateway_vpc_attachment" "tokyo_vpc_attach" {
  transit_gateway_id = aws_ec2_transit_gateway.tokyo_tgw.id

  vpc_id = aws_vpc.chewbacca_vpc01.id

  subnet_ids = [
    aws_subnet.chewbacca_private_subnet01.id,
    aws_subnet.chewbacca_private_subnet02.id
  ]

  tags = {
    Name = "lab3cek-tokyo-vpc-attach"
  }
}
